--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>实时录音转文字 + 下载</title>
+  <title>实时录音转文字 + 下载（修复版）</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -38,14 +38,14 @@
   </style>
 </head>
 <body>
-  <h1>实时录音转文字 + 下载</h1>
+  <h1>实时录音转文字 + 下载（修复版）</h1>
   
   <button id="startBtn">开始录音</button>
   <button id="stopBtn" disabled>停止录音</button>
   
   <div id="result">
-    <p>实时识别结果：<span id="transcript"></span></p>
-    <a id="downloadLink" style="display: none;">点击下载录音文件</a>
+    <p>实时识别结果：<span id="transcript"></span></p >
+    <a id="downloadLink" style="display: none;">点击下载录音文件</a >
   </div>
 
   <script>
@@ -57,8 +57,8 @@
     let mediaRecorder;
     let audioChunks = [];
     let recognition;
+    let finalTranscript = ''; // 新增：用于累积最终识别结果
 
-    // 初始化录音和语音识别
     async function init() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
@@ -78,7 +78,7 @@
           audioChunks = [];
         };
 
-        // 初始化语音识别（仅限Chrome）
+        // 语音识别初始化（仅限Chrome）
         if ('webkitSpeechRecognition' in window) {
           recognition = new webkitSpeechRecognition();
           recognition.continuous = true;
@@ -90,14 +90,15 @@
             for (let i = event.resultIndex; i < event.results.length; i++) {
               const transcript = event.results[i][0].transcript;
               if (event.results[i].isFinal) {
-                transcriptEl.textContent += transcript + ' ';
+                finalTranscript += transcript + ' '; // 最终结果累积
               } else {
-                interimTranscript += transcript;
+                interimTranscript += transcript;      // 中间结果临时存储
               }
             }
-            // 实时显示中间结果
-            transcriptEl.textContent += interimTranscript;
+            // 合并显示：最终结果 + 当前中间结果
+            transcriptEl.textContent = finalTranscript + interimTranscript;
           };
+
         } else {
           alert('当前浏览器不支持实时语音识别，请使用最新版Chrome！');
         }
@@ -107,7 +108,6 @@
       }
     }
 
-    // 页面加载时初始化
     document.addEventListener('DOMContentLoaded', init);
 
     // 按钮事件
@@ -116,8 +116,9 @@
       recognition.start();
       startBtn.disabled = true;
       stopBtn.disabled = false;
-      transcriptEl.textContent = ''; // 清空之前的结果
-      downloadLink.style.display = 'none'; // 隐藏下载链接
+      finalTranscript = '';          // 清空历史最终结果
+      transcriptEl.textContent = ''; // 清空显示区域
+      downloadLink.style.display = 'none';
     });
 
     stopBtn.addEventListener('click', () => {
